# ntSynt

./: .gitignore  .gitmodules  .gitpod.yml  LICENSE  README.md  azure-pipelines.yml  meson.build
analysis_scripts/: busco_assessment.py  busco_assessment.smk  denovo_synteny_block_stats.py  filter_miniprot_alignments.py  run_busco_assessment.py  synteny_distance_estimation.py
ntjoin_src/: meson.build
scripts/: install-ntjoin
src/: .clang-tidy  meson.build  ntsynt_make_common_bf.cpp  ntsynt_make_solid_bf.cpp
src/scripts/: format
tests/: genome_file_list.tsv  ntsynt_tests.py  run_ntSynt_demo.sh
tests/expected_result/: celegans-A-B-ntSynt.merge_collinear.synteny_blocks.tsv  celegans-A-B-ntSynt.pre-collinear-merge.synteny_blocks.tsv  celegans-A-B-ntSynt.synteny_blocks.tsv  celegans-A-ntSynt.pre-collinear-merge.synteny_blocks.tsv  celegans-A-ntSynt.synteny_blocks.tsv  celegans-chrII-III.A.fa.fai  celegans-chrII-III.A.fa.k20.w1000.tsv  celegans-chrII-III.A.fa.k24.w1000.tsv  celegans-chrII-III.B.fa.fai  (+4 more)
visualization_scripts/: README.md  chromosome-painting.R  convert_distance_matrix_to_phylip.py  distance_cladogram.R  format_blocks_chromosome_painting.py  format_blocks_gggenomes.py  format_blocks_gggenomes.sh  format_for_visualization.py  gggenomes_normalize_strands.py  gggenomes_sort_sequences.py  plot_gggenomes.py  plot_gggenomes.smk  plot_synteny_blocks-chromosome-painting.R  plot_synteny_blocks_gggenomes.R  plot_synteny_blocks_gggenomes_ggtree.R  plot_synteny_blocks_ribbon_plot.R  rename_synteny_blocks.py  sort_ntsynt_blocks.py  synteny_distance_estimation.py
(+9 files in other folders)
